--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -26,7 +26,9 @@ The guide is intended as a comprehensive resource for contributing to base R. Th
 
 4. The [Reporting Bugs](#ReportingBugs) chapter discusses what condition may or may not be a bug and how to report bugs if you find them.
 
-5. The [Reviewing Bugs](#ReviewBugs) chapter discusses how you can make a contribution to reviewing bug reports.
+5. The [Submitting Feature Requests](#FeatureRequests) chapter discusses how to submit feature requests and shares some examples of feature requests submitted ob Bugzilla.
+
+6. The [Reviewing Bugs](#ReviewBugs) chapter discusses how you can make a contribution to reviewing bug reports.
 
 6. The [Finding the Source](#FindSource) chapter provides an overview of the R codebase and helps with finding source code of base functions written in R and/or C.
 
@@ -36,7 +38,7 @@ The guide is intended as a comprehensive resource for contributing to base R. Th
 
 9. The [Message Translations](#MessageTranslations) chapter covers internationalization in R, i.e., the display of messages in languages other than English.
 
-10. The [Testing Pre-release R Versions]{#TestRVer} discusses how you can help with testing of pre-release versions of R.
+10. The [Testing Pre-release R Versions](#TestRVer) discusses how you can help with testing of pre-release versions of R.
 
 11. The [R Core Developers](#CoreDev) chapter contains a list of the former and current members of the R Core team who have write access to the R source.
 
